# c2pool

./: .gitignore  .gitmodules  .mcp.json  ARCHIVAL_REPORT.md  C2POOL_FINAL_STATUS.md  C2POOL_HELP_ENHANCEMENT_REPORT.md  C2POOL_MODES_SUMMARY.md  C2POOL_PAYOUT_SUCCESS_REPORT.md  C2POOL_USAGE_GUIDE.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakeLists_alt.txt  CMakeLists_old.txt  DEVELOPER_GUIDE.md  DEVELOPER_PAYOUT_SYSTEM.md  ENHANCED_COINBASE_IMPLEMENTATION.md  GITHUB_ISSUE_RESPONSE.md  INFRASTRUCTURE.md  KNOWN_ISSUES.md  LEGACY_BRIDGE_DECISION.md  LICENSE.md  LTC_ADDRESS_VALIDATION_FIX.md  MINING_VERIFICATION_COMPLETE.md  PAYOUT_ANALYSIS.md  PAYOUT_SUCCESS_REPORT.md  README.md  SHARE_SEPARATION_VERIFICATION.md  SOLO_MODE_IMPLEMENTATION.md  VARDIFF_FIX_PLAN.md  bitcoin-leveldb.html  build-debug.sh  build-release.sh  c2pool_testnet.yaml  coinbase_test_results.json  conanfile.txt  conanfile_legacy.py  design.c  design.cpp  difficulty-adjustment.html  (+42 more)
btclibs/: CMakeLists.txt  arith_uint256.cpp  arith_uint256.h  base58.cpp  base58.h  core_io.h  custom_sha256.h  hash.cpp  hash.h  pubkey.cpp  pubkey.h  standart.cpp  standart.h  uint256.cpp  uint256.h
c2pool/: CMakeLists.txt  c2pool.cpp  c2pool_main_menu.h  c2pool_version.h  coind_master.h  coind_n_pool.cpp  coind_worker.cpp  config.h  main_old.cpp  node_manager.cpp  node_manager.h  only_coind_node.cpp  only_jsorpc_coind.cpp  only_pool_node.cpp
coind/: CMakeLists.txt  data.cpp  data.h  data.py  transaction.cpp  transaction.h
devcore/: CMakeLists.txt  addrStore.cpp  addrStore.h  common.cpp  common.h  config.cpp  config.h  db.cpp  dbBatch.cpp  dbBatch.h  deferred.cpp  events.h  filesystem.cpp  filesystem.h  logger.cpp  logger.h  py_base.h  pystruct.cpp  random.cpp  random.h  str.h
libcoind/: CMakeLists.txt  data.cpp  data.h  height_tracker.h  transaction.cpp  transaction.h  types.h
libdevcore/: CMakeLists.txt  addrStore.cpp  addrStore.h  addr_store.cpp  addr_store.h  common.cpp  common.h  config.cpp  config.h  converter.cpp  db.cpp  db.h  dbObject.h  deferred.h  events.h  exceptions.h  expiring_dict.h  filesystem.cpp  filesystem.h  logger.cpp  logger.h  math.cpp  math.h  prefsum.h  py_base.cpp  py_base.h  random.cpp  random.h  str.cpp  str.h  stream.cpp  stream.h  stream_types.h  timer.h  types.cpp  types.h
libnet/: CMakeLists.txt  coind_interface.h  coind_messages.h  coind_network.h  coind_node.cpp  coind_node.h  coind_node_data.cpp  coind_node_data.h  coind_protocol.h  coind_protocol_data.h  coind_socket.cpp  coind_socket.h  converter.cpp  converter.h  messages.cpp  messages.h  nodeManager.cpp  nodeManager.h  node_manager.cpp  node_manager.h  node_member.cpp  node_member.h  p2p_node.cpp  p2p_node.h  p2p_protocol.cpp  p2p_protocol.h  p2p_socket.cpp  p2p_socket.h  pool_handshake.h  pool_interface.h  pool_messages.h  pool_network.cpp  pool_network.h  pool_node.cpp  pool_node.h  pool_node_data.cpp  pool_node_data.h  pool_node_interface.h  pool_node_network.cpp  pool_node_network.h  (+5 more)
libnet2/: CMakeLists.txt  coind_node.cpp  coind_node.h  coind_node_data.cpp  coind_node_data.h  p2p_handshake.h  p2p_messages.cpp  p2p_messages.h  p2p_node.cpp  p2p_node.h  p2p_node_interface.h  p2p_protocol.cpp  p2p_protocol.h  p2p_protocol_data.h  p2p_socket.cpp  p2p_socket.h  pool_handshake.cpp  pool_handshake.h  pool_messages.cpp  pool_messages.h  pool_node.cpp  pool_node.h  pool_node_data.cpp  pool_node_data.h  pool_protocol.cpp  pool_protocol.h  pool_protocol_data.h  pool_socket.cpp  pool_socket.h  worker.cpp  worker.h
libp2p/: CMakeLists.txt  handler.h  handshake.h  message.h  net_errors.h  net_supervisor.h  network_process.h  network_tree.h  network_tree_node.h  node.h  protocol.cpp  protocol.h  protocol_components.h  protocol_events.h  socket.cpp  socket.h  socket_components.h  socket_data.h  socket_packet.h  workflow_node.h  workflow_process.h  workflow_task.h  workflow_thread.h  workflow_tree.h
networks/: CMakeLists.txt  network.cpp  network.h
sharechains/: CMakeLists.txt  README.md  base_share_tracker.h  data.cpp  data.h  generate_tx.cpp  generate_tx.h  prefsum_doa.cpp  prefsum_doa.h  prefsum_share.cpp  prefsum_share.h  prefsum_share2.h  prefsum_weights.cpp  prefsum_weights.h  share.cpp  share.h  shareStore.cpp  shareStore.h  shareTracker.h  shareTypes.cpp  shareTypes.h  share_adapters.cpp  share_adapters.h  share_builder.cpp  share_builder.h  share_old.cpp  share_old.h  share_store.cpp  share_store.h  share_streams.cpp  share_streams.h  share_tracker.cpp  share_tracker.h  share_types.cpp  share_types.h  share_types_stream.cpp  share_types_stream.h  tracker.cpp  tracker.h
temp/: CMakeLists.txt  addr_check.cpp  base_node_check.cpp  check_hash_uint256.cpp  check_node.cpp  check_templ_lambda_error.cpp  condition_cl.cpp  constexpr_final1.cpp  constexpr_final2.cpp  constexpr_final_pointers.cpp  constexpr_final_span.cpp  constexpr_if.cpp  constexpr_if2.cpp  constexpr_if3.cpp  constexpr_if4.cpp  constexpr_if5.cpp  constexpr_if6.cpp  constexpr_if7.cpp  constexpr_if8.cpp  constexpr_variants.cpp  constexpr_variants2.cpp  def.cpp  def_macro.hpp  events_check.cpp  finaloptz.cpp  get_chain_test.cpp  make_dict.cpp  message_parser.cpp  other.cpp  parse_bitcoin_index.cpp  reply_matcher_test.cpp  spec_templ_local.cpp  specificator_type.cpp  static_assert_check_templ.cpp  struct_for_struct.cpp  t1.cpp  t2.cpp  t3.cpp  t4.cpp  template_macro.cpp  (+5 more)
test/: CMakeLists.txt  README.md  dash_mn_set_1519825.inc  fixtures.py  integration_test.py  simple_payout_test.py  smoke_test.py  test_address_resolution.cpp  test_auto_ratchet.cpp  test_bch_underfill_guard.cpp  test_blockchain_integration.cpp  test_btc_underfill_guard.cpp  test_c2pool_address_validation.py  test_coin_broadcaster.cpp  test_coinbase_standalone.cpp  test_compact_blocks.cpp  test_compute_share_target.cpp  test_dash_auto_ratchet.cpp  test_dash_battletest_regressions.cpp  test_dash_block_producer.cpp  test_dash_block_relay.cpp  test_dash_block_relay_binding.cpp  test_dash_block_relay_dispatch.cpp  test_dash_block_relay_dual_arm.cpp  test_dash_block_relay_plan.cpp  test_dash_block_replay.cpp  (+109 more)
(+1891 files in other folders)
