cmake_minimum_required(VERSION 3.22)
project(c2pool C CXX)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

if(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
    set(CMAKE_BUILD_TYPE Release)
endif()

if(MSVC)
    # Suppress common MSVC warnings for POSIX names and unsafe CRT functions
    add_compile_definitions(_CRT_SECURE_NO_WARNINGS _WINSOCK_DEPRECATED_NO_WARNINGS)
endif()

# Handle CMake 3.30+ policy for FindBoost removal
if(POLICY CMP0167)
    cmake_policy(SET CMP0167 NEW)
endif()

# Find optional GTest for testing
find_package(GTest QUIET)

# Try modern BoostConfig first, fallback to FindBoost for older systems
# system is header-only since Boost 1.69; only request it if the config provides it
find_package(Boost REQUIRED COMPONENTS log log_setup thread filesystem exception)
find_package(Boost QUIET OPTIONAL_COMPONENTS system)

find_package(nlohmann_json REQUIRED)

# Threading (needed by LevelDB on some platforms)
find_package(Threads REQUIRED)

# Find LevelDB for persistent storage
# Try system shared lib first. If only static .a is found (Conan cross-compile),
# use find_package which properly links transitive deps (snappy, crc32c).
find_library(LEVELDB_LIB_PATH NAMES leveldb)
find_path(LEVELDB_INC_PATH leveldb/db.h)
if(LEVELDB_LIB_PATH AND LEVELDB_INC_PATH AND LEVELDB_LIB_PATH MATCHES "\\.(so|dylib)")
    set(LEVELDB_LIBRARIES ${LEVELDB_LIB_PATH})
    set(LEVELDB_INCLUDE_DIRS ${LEVELDB_INC_PATH})
    message(STATUS "LevelDB found (shared): ${LEVELDB_LIBRARIES}")
else()
    find_package(leveldb QUIET)
    if(TARGET leveldb::leveldb)
        message(STATUS "LevelDB found via find_package (Conan/vcpkg)")
        set(LEVELDB_LIBRARIES leveldb::leveldb)
        set(LEVELDB_INCLUDE_DIRS "")
    elseif(LEVELDB_LIB_PATH AND LEVELDB_INC_PATH)
        # Shared lib on non-standard path (Homebrew)
        set(LEVELDB_LIBRARIES ${LEVELDB_LIB_PATH})
        set(LEVELDB_INCLUDE_DIRS ${LEVELDB_INC_PATH})
        message(STATUS "LevelDB found: ${LEVELDB_LIBRARIES}")
    else()
        message(FATAL_ERROR "LevelDB not found. Install leveldb-dev or add to Conan.")
    endif()
endif()

# Find libsecp256k1 for ECDSA signature verification
# Try system library first (Linux), then Conan/vcpkg package (Windows)
find_library(SECP256K1_LIBRARIES secp256k1)
find_path(SECP256K1_INCLUDE_DIRS secp256k1.h)
if(SECP256K1_LIBRARIES AND SECP256K1_INCLUDE_DIRS)
    message(STATUS "secp256k1 found: ${SECP256K1_LIBRARIES}")
    message(STATUS "secp256k1 includes: ${SECP256K1_INCLUDE_DIRS}")
else()
    find_package(secp256k1 REQUIRED)
    message(STATUS "secp256k1 found via find_package (Conan/vcpkg)")
    set(SECP256K1_LIBRARIES secp256k1::secp256k1)
    set(SECP256K1_INCLUDE_DIRS "")
endif()

# Enable testing only if GTest is found
if(GTest_FOUND OR GTEST_FOUND)
    enable_testing()
    include(CTest)
    message(STATUS "GTest found - testing enabled")
else()
    message(STATUS "GTest not found - testing disabled")
endif()
include_directories(include)
include_directories(src)

# Make secp256k1 headers available globally (needed by btclibs, impl/)
if(SECP256K1_INCLUDE_DIRS)
    include_directories(${SECP256K1_INCLUDE_DIRS})
endif()

# ── Phase L step 0: dashbls (Apache 2.0, dashpay/bls-signatures) ──────────
#
# Dashbls is the Chia BLS fork dashcore links against. We vendor a pruned
# copy under external/dashbls/ and build via dashbls's own autotools
# (autoreconf + configure + make), matching dashcore's exact build path.
#
# Why autotools and not dashbls's CMakeLists: dashbls's CMake build is
# upstream-broken for general use (its relic_conf.h.in template is
# .gitignored, gets regenerated by autoreconf using autoconf #undef
# syntax that CMake's configure_file doesn't substitute, leaving every
# arch-define as #undef → relic_arch.h falls through to the AVR
# microcontroller branch and tries to #include <avr/pgmspace.h>).
# Autotools is dashbls's primary supported build path (proven by
# dashcore using it on Linux/macOS daily).
#
# Build host requirements: autoconf, automake, libtool, pthread.
# - Linux: apt install autoconf automake libtool (typically already there)
# - macOS: brew install autoconf automake libtool  (uses glibtoolize,
#   handled by dashbls's autogen.sh)
# - Windows native: MSYS2 or WSL2 — autotools doesn't work in MSVC
#   natively. Cross-compile from Linux is the documented escape hatch.
#
# Build artifact: ${DASHBLS_INSTALL}/lib/libdashbls.a — a self-contained
# static archive bundling relic + mimalloc + the BLS C++ wrapper. Headers
# go to ${DASHBLS_INSTALL}/include/dashbls/.

include(ExternalProject)

set(DASHBLS_PREFIX  ${CMAKE_BINARY_DIR}/external/dashbls)
set(DASHBLS_INSTALL ${DASHBLS_PREFIX}/install)
set(DASHBLS_LIB     ${DASHBLS_INSTALL}/lib/libdashbls.a)
set(DASHBLS_INCLUDE ${DASHBLS_INSTALL}/include/dashbls)

ExternalProject_Add(dashbls_external
    SOURCE_DIR        ${CMAKE_SOURCE_DIR}/external/dashbls
    PREFIX            ${DASHBLS_PREFIX}
    INSTALL_DIR       ${DASHBLS_INSTALL}
    BUILD_IN_SOURCE   1
    CONFIGURE_COMMAND
        bash -c "cd <SOURCE_DIR> && (test -f configure || ./autogen.sh) && ./configure --prefix=<INSTALL_DIR> --enable-shared=no --enable-static=yes --disable-tests --disable-bench"
    BUILD_COMMAND     bash -c "cd <SOURCE_DIR> && make -j"
    INSTALL_COMMAND   bash -c "cd <SOURCE_DIR> && make install"
    BUILD_BYPRODUCTS  ${DASHBLS_LIB}
    LOG_DOWNLOAD      0
    LOG_CONFIGURE     1
    LOG_BUILD         1
    LOG_INSTALL       1
)

# Imported target that wraps the autotools-built static library so
# downstream targets just `target_link_libraries(... dashbls)`. The
# include directory is ${DASHBLS_INSTALL}/include so consumers
# `#include <dashbls/bls.hpp>`.
add_library(dashbls STATIC IMPORTED GLOBAL)
add_dependencies(dashbls dashbls_external)
# dashbls's Makefile.am doesn't install headers — point at the source
# tree's include/ instead. Public C++ surface is `<dashbls/bls.hpp>` etc.
# dashbls's headers transitively #include <relic_conf.h> (autotools-
# generated by the autoreconf+configure step we triggered above), so
# expose relic's include dir too. INTERFACE_INCLUDE_DIRECTORIES on
# IMPORTED targets requires existing dirs at configure time — we
# pre-create both via file(MAKE_DIRECTORY) so a fresh checkout
# configures cleanly even before the dashbls_external build has run.
file(MAKE_DIRECTORY ${CMAKE_SOURCE_DIR}/external/dashbls/depends/relic/include)
set_target_properties(dashbls PROPERTIES
    IMPORTED_LOCATION             ${DASHBLS_LIB}
    INTERFACE_INCLUDE_DIRECTORIES "${CMAKE_SOURCE_DIR}/external/dashbls/include;${CMAKE_SOURCE_DIR}/external/dashbls/depends/relic/include"
)

add_subdirectory(src)
add_subdirectory(test)
# add_subdirectory(benchmark)
# add_subdirectory(temp)